[metadata]
name = nola-tools
author = CoXlab Inc.
author_email = support@coxlab.kr
maintainer = Jongsoo Jeong
maintainer-email = jsjeong@coxlab.kr
description = Nol.A SDK Command Line Interface for IoT Device Firmware Development
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/CoXlabInc/Nol.A-Tools
project_urls =
	Bug Tracker = https://github.com/CoXlabInc/Nol.A-Tools/issues
license = MIT
classifier =
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
keywords =
	nola
	iotown
	iot
	firmware

[files]
packages = nola_tools

[entry_points]
console_scripts =
	nola=nola_tools:main
	nolja=nola_tools.nolja:main

[pbr]
skip_changelog=1
skip_authors=1
